--- a/html/Detail.html
+++ b/html/Detail.html
@@ -47,7 +47,7 @@
                 <div>
                     <ul class="header_top_menu">
                         <li>
-                            <a href="./Home.html">Home</a>
+                            <a href="./index.html">Home</a>
                         </li>
                         <li>
                             <a href="#">Phiếu góp ý</a>
