--- a/html/Invoice.html
+++ b/html/Invoice.html
@@ -47,7 +47,7 @@
             let order = JSON.parse(localStorage.getItem("order"));
             if (!order) {
                 alert("Không có dữ liệu hóa đơn!");
-                window.location.href = "./Home.html";
+                window.location.href = "../index.html";
                 return;
             }
     
