--- a/html/Signin2.html
+++ b/html/Signin2.html
@@ -38,7 +38,7 @@
                 <div>
                     <ul class="header_top_menu">
                         <li>
-                            <a href="./index.html">Home</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li>
                             <a href="./Cart.html">Giỏ hàng</a>
