--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
                 <div>
                     <ul class="header_top_menu">
                         <li>
-                            <a href="./Cart.html">Giỏ hàng</a>
+                            <a href="./html/Cart.html">Giỏ hàng</a>
                         </li>
                         <li>
-                            <a href="./Register.html">Đăng ký</a>
+                            <a href="./html/Register.html">Đăng ký</a>
                         </li>
                         <li>
-                            <a href="./Signin.html">Đăng nhập</a>
+                            <a href="./html/Signin.html">Đăng nhập</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="header_body">
                 <div class="header_logo">
-                    <img src="../img/Du lịch Logo.png" alt="" width="150px" height="100px">
+                    <img src="./img/Du lịch Logo.png" alt="" width="150px" height="100px">
                 </div>
                 <div class="nav">
                     <ul class="nav_menu">
-                        <li class="nav_menu_item"><a href="./Home.html" class="active">DU LỊCH</a></li>
+                        <li class="nav_menu_item"><a href="index.html" class="active">DU LỊCH</a></li>
                         <li class="nav_menu_item"><a href="#">VÉ MÁY BAY</a></li>
                         <li class="nav_menu_item"><a href="#">KHÁCH SẠN</a></li>
                         <li class="nav_menu_item"><a href="#">DỊCH VỤ LÀM VISA</a></li>
@@ -64,9 +64,9 @@
                         <li class="nav_menu_item drop_down_menu">
                             <a href="">GIỚI THIỆU</a>
                             <ul class="drop_down p-0 m-0">
-                                <li><a href="">Tổng quan</a></li>
-                                <li><a href="">Thông tin công ty</a></li>
-                                <li><a href="">Chứng nhận</a></li>
+                                <li><a href="#">Tổng quan</a></li>
+                                <li><a href="#">Thông tin công ty</a></li>
+                                <li><a href="#">Chứng nhận</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -76,7 +76,7 @@
         </div>
         <div class="content">
             <div class="content_header_img">
-                <img src="../img/lagoon-4812995_1920.jpg" alt="" width="100%" height="400px">
+                <img src="./img/lagoon-4812995_1920.jpg" alt="" width="100%" height="400px">
             </div>
             <div class="content_tour_menu">
                 <div class="menu-container">
@@ -111,31 +111,31 @@
                 <div class="menu-container">
                     <a href="#" class="menu-item">
                         <div class="menu-icon">
-                            <img src="../img/travel-agent-pax-git.png" alt="Tour Doanh Nghiệp">
+                            <img src="./img/travel-agent-pax-git.png" alt="Tour Doanh Nghiệp">
                         </div>
                         <span>Tour Doanh Nghiệp</span>
                     </a>
                     <a href="#" class="menu-item">
                         <div class="menu-icon">
-                            <img src="../img/little-church-du-lich-viet.png" alt="Du lịch Hành Hương">
+                            <img src="./img/little-church-du-lich-viet.png" alt="Du lịch Hành Hương">
                         </div>
                         <span class="highlight-text">Du lịch Hành Hương</span>
                     </a>
                     <a href="#" class="menu-item">
                         <div class="menu-icon">
-                            <img src="../img/usp-tour-doc-dao-du-lich-viet1.jpg" alt="Tour Độc Lạ">
+                            <img src="./img/usp-tour-doc-dao-du-lich-viet1.jpg" alt="Tour Độc Lạ">
                         </div>
                         <span>Tour Độc Lạ</span>
                     </a>
                     <a href="#" class="menu-item">
                         <div class="menu-icon">
-                            <img src="../img/snowman.png" alt="Du lịch Mùa Đông">
+                            <img src="./img/snowman.png" alt="Du lịch Mùa Đông">
                         </div>
                         <span>Du lịch Mùa Đông</span>
                     </a>
                     <a href="#" class="menu-item">
                         <div class="menu-icon">
-                            <img src="../img/sakura(2).png" alt="Tour Hoa Anh Đào 2025">
+                            <img src="./img/sakura(2).png" alt="Tour Hoa Anh Đào 2025">
                         </div>
                         <span>Tour Hoa Anh Đào 2025</span>
                     </a>
@@ -148,7 +148,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour-da-nang-cao-nguyen-ba-na-mua-xuan-du-lich-viet.jpg" class="card-img-top" alt="Tour 1">
+                            <img src="./img/anhtour/tour-da-nang-cao-nguyen-ba-na-mua-xuan-du-lich-viet.jpg" class="card-img-top" alt="Tour 1">
                             <div class="card-body">
                                 <h6 class="card-title">Đà Nẵng - Bà Nà - Hội An</h6>
                                 <p>3 ngày 2 đêm</p>
@@ -161,7 +161,7 @@
                     <div class="col-md-3">
                         <div class="card position-relative tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour-du-lich-da-nang-mua-xuan-2025-du-lich-viet.jpg" class="card-img-top" alt="Tour 2">
+                            <img src="./img/anhtour/tour-du-lich-da-nang-mua-xuan-2025-du-lich-viet.jpg" class="card-img-top" alt="Tour 2">
                             <div class="card-body">
                                 <h6 class="card-title">Đà Nẵng - Bà Nà - Cố Đô Huế</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -174,7 +174,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour-du-lich-da-nang-mua-xuan-du-lich-viet.jpg" class="card-img-top" alt="Tour 3">
+                            <img src="./img/anhtour/tour-du-lich-da-nang-mua-xuan-du-lich-viet.jpg" class="card-img-top" alt="Tour 3">
                             <div class="card-body">
                                 <h6 class="card-title">Bà Nà - Hội An - La Vang</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -187,7 +187,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour-du-lich-da-nang-mua-xuan-gia-re-du-lich-viet.jpg" class="card-img-top" alt="Tour 3">
+                            <img src="./img/anhtour/tour-du-lich-da-nang-mua-xuan-gia-re-du-lich-viet.jpg" class="card-img-top" alt="Tour 3">
                             <div class="card-body">
                                 <h6 class="card-title">Bà Nà - Hội An - La Vang</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -206,7 +206,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour_chau_a_1.jpg" class="card-img-top" alt="Tour 1">
+                            <img src="./img/anhtour/tour_chau_a_1.jpg" class="card-img-top" alt="Tour 1">
                             <div class="card-body">
                                 <h6 class="card-title">Tour Trung Quốc mùa Xuân 2025</h6>
                                 <p>3 ngày 2 đêm</p>
@@ -219,7 +219,7 @@
                     <div class="col-md-3">
                         <div class="card position-relative tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour_chau_a_2.jpg" class="card-img-top" alt="Tour 2">
+                            <img src="./img/anhtour/tour_chau_a_2.jpg" class="card-img-top" alt="Tour 2">
                             <div class="card-body">
                                 <h6 class="card-title">Tour Đài Loan</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -232,7 +232,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour_chau_a_3.jpg" class="card-img-top" alt="Tour 3">
+                            <img src="./img/anhtour/tour_chau_a_3.jpg" class="card-img-top" alt="Tour 3">
                             <div class="card-body">
                                 <h6 class="card-title">Tour Nhật Bản - Tokyo</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -245,7 +245,7 @@
                     <div class="col-md-3">
                         <div class="card tour-card" onclick="openDetail()">
                             <span class="badge">Từ Hồ Chí Minh</span>
-                            <img src="../img/anhtour/tour_chau_a_4.jpg" class="card-img-top" alt="Tour 3">
+                            <img src="./img/anhtour/tour_chau_a_4.jpg" class="card-img-top" alt="Tour 3">
                             <div class="card-body">
                                 <h6 class="card-title">Tour Trung Quốc - Bắc Kinh</h6>
                                 <p>4 ngày 3 đêm</p>
@@ -263,7 +263,7 @@
                 <div class="row p-0 m-0">
                     <div class="col-md-3">
                         <div class="card tour-card">
-                            <img src="../img/anhtour/kinh-nghiem-du-lich-nam-my-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Nam Mỹ">
+                            <img src="./img/anhtour/kinh-nghiem-du-lich-nam-my-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Nam Mỹ">
                             <div class="card-body">
                                 <h5 class="card-title">Kinh nghiệm du lịch Nam Mỹ</h5>
                                 <p class="card-text">Chia sẻ chi tiết các kinh nghiệm thực tế khi đi du lịch Nam Mỹ...</p>
@@ -272,7 +272,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card tour-card">
-                            <img src="../img/anhtour/kinh-nghiem-du-lich-tho-nhi-ki-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Thổ Nhĩ Kỳ">
+                            <img src="./img/anhtour/kinh-nghiem-du-lich-tho-nhi-ki-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Thổ Nhĩ Kỳ">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Kinh nghiệm du lịch Thổ Nhĩ Kỳ</h5>
                                 <p class="card-text">Chia sẻ kinh nghiệm du lịch đến Thổ Nhĩ Kỳ...</p>
@@ -281,7 +281,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card tour-card">
-                            <img src="../img/anhtour/kinh-nghiem-du-lich-cua-lo-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Cửa Lò">
+                            <img src="./img/anhtour/kinh-nghiem-du-lich-cua-lo-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Cửa Lò">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Kinh nghiệm du lịch Cửa Lò</h5>
                                 <p class="card-text">Chia sẻ các kinh nghiệm thực tế khi đi du lịch Cửa Lò...</p>
@@ -290,7 +290,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card tour-card">
-                            <img src="../img/anhtour/ha-noi-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Hà Nội">
+                            <img src="./img/anhtour/ha-noi-du-lich-viet.jpg" class="card-img-top" alt="Kinh nghiệm du lịch Hà Nội">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Kinh nghiệm du lịch Hà Nội</h5>
                                 <p class="card-text">Hà Nội luôn là một địa điểm du lịch hấp dẫn trong nước...</p>
@@ -335,6 +335,6 @@
             </div>
         </footer>
     </div>
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
