--- a/html/Invoice.html
+++ b/html/Invoice.html
@@ -130,7 +130,7 @@
             
                 <div class="invoice-footer">
                     <button onclick="window.print()" class="btn btn-primary">🖨️ In Hóa Đơn</button>
-                    <a href="./Home.html" class="btn btn-secondary">Về Trang Chủ</a>
+                    <a href="../index.html" class="btn btn-secondary">Về Trang Chủ</a>
                 </div>
             </div>
         </div>
